<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="25dp"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="104dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:hint="Name"
            android:textColor="#8A8585"
            android:textColorHint="#8A8585"
            android:id="@+id/registerName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="#8A8585"
            android:textColorHint="#8A8585"
            android:id="@+id/registerEmail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="Phone"
            android:inputType="phone"
            android:textColor="#8A8585"
            android:textColorHint="#8A8585"
            android:id="@+id/registerPhone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColorHint="#8A8585"
            android:textColor="#8A8585"
            android:id="@+id/registerPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textColor="#8A8585"
            android:textColorHint="#8A8585"
            android:layout_marginBottom="25dp"
            android:id="@+id/confirmPassword"/>

        <CheckBox
            android:id="@+id/privacyCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textColor="@color/white"
            android:text="@string/hyperlink_privacy"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/registerButton"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_theaters_24"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="Register"
                android:textSize="20sp"/>
        </FrameLayout>



    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/drawer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>