...
        android:layout_alignParentLeft="true"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="104dp"/>

    <FrameLayout
        android:id="@+id/loginFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_gravity="center"
        android:layout_below="@+id/logoImg">

...
            android:text="Login"
            android:textSize="18sp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/registerFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/loginFrame">

        <ImageButton
...
